[package]
name = "harmony-kitri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Kitri — Harmony's native programming model for durable distributed computation (Layer 0: types & traits)"

[features]
default = ["std"]
std = [
    "harmony-content/std",
    "harmony-identity/std",
    "serde/std",
    "dep:harmony-workflow",
    "dep:toml",
]

[dependencies]
harmony-workflow = { workspace = true, optional = true }
harmony-content = { workspace = true, default-features = false }
harmony-identity = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
toml = { workspace = true, optional = true }

[dev-dependencies]
