[package]
name = "harmony-mail"
description = "SMTP-to-Harmony bridge gateway for decentralized email"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "harmony-mail"
path = "src/main.rs"

[dependencies]
harmony-mailbox.workspace = true
harmony-identity.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
toml.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["io-util", "rt-multi-thread"] }
tokio-util.workspace = true
bytes = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
mail-parser = "0.11"
blake3.workspace = true
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
hex.workspace = true
mail-auth = "0.7"
mail-builder = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { workspace = true, features = ["std"] }
base64 = { workspace = true }
harmony-content = { workspace = true, features = ["std"] }
harmony-db = { workspace = true }
rpassword = "5"

[dev-dependencies]
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
tokio = { workspace = true, features = ["io-util", "test-util"] }
rcgen = "0.13"
tempfile = "3"
