[package]
name = "harmony-mailbox"
description = "Shared mailbox wire format types for Harmony mail"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harmony-identity.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
