[package]
name = "harmony-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
wasmtime = ["harmony-compute/wasmtime"]
# Disable BLAKE3 NEON assembly for cross-compilation without a C cross-compiler.
no-neon = ["harmony-crypto/no-neon"]

[[bin]]
name = "harmony"
path = "src/main.rs"

[dependencies]
harmony-compute.workspace = true
harmony-content = { workspace = true, features = ["std"] }
harmony-crypto = { workspace = true, features = ["std"] }
harmony-identity = { workspace = true, features = ["std"] }
harmony-reticulum = { workspace = true, features = ["std"] }
harmony-workflow.workspace = true
harmony-zenoh.workspace = true
clap = { version = "4", features = ["derive"] }
hex.workspace = true
mdns-sd = { version = "0.18", features = ["async"] }
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenoh.workspace = true
zeroize = { workspace = true, features = ["std"] }

[dev-dependencies]
tempfile = "3"
