[package]
name = "harmony-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
wasmtime = ["harmony-compute/wasmtime"]
# Disable BLAKE3 NEON assembly for cross-compilation without a C cross-compiler.
no-neon = ["harmony-crypto/no-neon"]
rawlink = ["harmony-rawlink"]
archivist = ["harmony-s3/archivist"]
inference = ["harmony-compute/inference", "harmony-workflow/inference", "harmony-runtime/inference", "dep:harmony-inference", "dep:candle-core", "dep:harmony-agent", "dep:harmony-engram"]
nix-cache = ["dep:axum", "dep:tower-http", "dep:base64", "dep:ed25519-dalek"]

[[bin]]
name = "harmony"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bytes = "1"
ed25519-dalek = { workspace = true, optional = true }
harmony-agent = { workspace = true, optional = true }
harmony-athenaeum = { workspace = true, features = ["std"] }
harmony-compute.workspace = true
harmony-contacts = { workspace = true, features = ["std"] }
harmony-credential.workspace = true
harmony-content = { workspace = true, features = ["std"] }
harmony-discovery = { workspace = true, features = ["std"] }
harmony-memo = { workspace = true, features = ["std"] }
harmony-peers = { workspace = true, features = ["std"] }
harmony-rawlink = { workspace = true, optional = true }
harmony-runtime.workspace = true
harmony-s3 = { workspace = true, optional = true }
harmony-tunnel = { workspace = true, features = ["std"] }
iroh = { workspace = true }
harmony-crypto = { workspace = true, features = ["std"] }
harmony-identity = { workspace = true, features = ["std"] }
harmony-reticulum = { workspace = true, features = ["std"] }
harmony-workflow.workspace = true
harmony-speculative.workspace = true
harmony-engram = { workspace = true, optional = true }
harmony-inference = { workspace = true, optional = true }
harmony-zenoh.workspace = true
candle-core = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
hex.workspace = true
mdns-sd = { version = "0.18", features = ["async"] }
rand.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http = { workspace = true, optional = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
zenoh.workspace = true
postcard.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zeroize = { workspace = true, features = ["std"] }

[build-dependencies]
wat = { workspace = true }

[dev-dependencies]
tempfile = "3"
