[package]
name = "harmony-oluo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Oluo — Harmony's semantic search engine (USearch HNSW, sans-I/O)"

[features]
default = ["std"]
no-neon = ["harmony-crypto/no-neon"]
std = [
    "harmony-semantic/std",
    "harmony-crypto/std",
]

[dependencies]
harmony-semantic = { workspace = true, default-features = false }
harmony-crypto = { workspace = true, default-features = false }
harmony-search = { path = "../harmony-search" }
hashbrown = { workspace = true }

[dev-dependencies]
