[package]
name = "harmony-oluo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Oluo — Harmony's semantic search engine (USearch HNSW, sans-I/O)"

[features]
no-neon = ["harmony-crypto/no-neon"]

[dependencies]
harmony-semantic = { workspace = true }
harmony-crypto = { workspace = true }
harmony-search = { path = "../harmony-search" }
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true, features = ["alloc"] }

[dev-dependencies]
